--- a/config.json
+++ b/config.json
@@ -21,14 +21,14 @@
     "eventDisabled": [],
     "EMAIL": "",
     "OWNERLINK": "",
-    "BOTOWNER": "Rose Ann",
-    "FCA": "PROJECT",
+    "BOTOWNER": "Jonell Magallanes",
+    "FCA": "PROJECT ORION PROJECT",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Lexie Anne",
-    "PREFIX": "!",
+    "BOTNAME": "HAROLD HUTCHINS BOT",
+    "PREFIX": "?",
     "ADMINBOT": [
-        "61552108072050",
+        "100036956043695",
         "",
         "",
         "",
